build with update credits

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;background:black;">
     <canvas id="unity-canvas" width=360 height=800 tabindex="-1" style="width: 360px; height: 800px; background: #231F20"></canvas>
-    <script src="Build/Golast.loader.js"></script>
+    <script src="Build/srs.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -27,9 +27,9 @@
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
         arguments: [],
-        dataUrl: "Build/Golast.data",
-        frameworkUrl: "Build/Golast.framework.js",
-        codeUrl: "Build/Golast.wasm",
+        dataUrl: "Build/srs.data",
+        frameworkUrl: "Build/srs.framework.js",
+        codeUrl: "Build/srs.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "RocketStudio",
         productName: "Some Real Sperm",
